# neoLegacy

./: .gitattributes  .gitignore  CMakeLists.txt  COMPILE.md  README.md  Update-NightlyRelease.ps1  build-linux.sh  build-start-dedicated-server.sh  docker-compose.dedicated-server.ghcr.yml  docker-compose.dedicated-server.yml  flake.nix  start-dedicated-server.sh
Minecraft.Client/: ArchiveFile.cpp  ArmorStandArmorModel.cpp  ArmorStandRenderer.cpp  ArmorStandRenderer.h  BarrierParticle.cpp  BarrierParticle.h  BeaconRenderer.cpp  CMakeLists.txt  ChatScreen.cpp  ChatScreen.h  Chunk.cpp  ClientConnection.cpp  ClientConnection.h  ClientConstants.cpp  ClientConstants.h  CustomHeadLayer.cpp  CustomHeadLayer.h  DLCTexturePack.cpp  EnderDragonRenderer.cpp  EntityRenderDispatcher.cpp  EntityRenderer.h  EntityTracker.cpp  Extrax64Stubs.cpp  Font.cpp  Font.h  GameRenderer.cpp  Gui.cpp  Gui.h  GuiComponent.cpp  GuiComponent.h  HumanoidMobRenderer.cpp  HumanoidModel.cpp  ItemFrameRenderer.cpp  ItemInHandRenderer.cpp  ItemRenderer.cpp  LevelRenderer.cpp  LevelRenderer.h  LivingEntityRenderer.cpp  LivingEntityRenderer.h  LocalPlayer.cpp  (+47 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  BuildVer.h  Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Audio/: SoundEngine.cpp  SoundEngine.h  SoundNames.cpp
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCAudioFile.h  DLCManager.cpp  DLCPack.cpp
Minecraft.Client/Common/GameRules/: ConsoleSchematicFile.cpp  GameRule.cpp
Minecraft.Client/Common/Leaderboards/: SonyLeaderboardManager.cpp
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerStub.cpp
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_AbstractContainerMenu.h  IUIScene_CreativeMenu.cpp  IUIScene_EnchantingMenu.cpp  IUIScene_HUD.cpp  IUIScene_HUD.h  IUIScene_PauseMenu.cpp  IUIScene_StartGame.cpp  UI.h  UIBitmapFont.cpp  UIControl_Base.cpp  UIControl_BeaconEffectButton.cpp  UIControl_Label.cpp  UIControl_MinecraftHorse.cpp  UIControl_PlayerSkinPreview.cpp  UIControl_SaveList.cpp  UIControl_Slider.cpp  UIControl_Slider.h  UIControl_TextInput.cpp  UIController.cpp  UIController.h  UIEnums.h  UIFontData.cpp  UIFontData.h  UILayer.cpp  UIScene.cpp  UIScene.h  UIScene_AbstractContainerMenu.cpp  UIScene_BookAndQuillMenu.cpp  UIScene_ConnectingProgress.cpp  UIScene_ConnectingProgress.h  UIScene_CraftingMenu.cpp  UIScene_CreateWorldMenu.cpp  UIScene_CreateWorldMenu.h  UIScene_Credits.cpp  UIScene_DeathMenu.cpp  UIScene_EndPoem.cpp  UIScene_HUD.cpp  UIScene_HUD.h  (+14 more)
Minecraft.Client/Durango/: Durango_App.cpp  Durango_UIController.cpp
Minecraft.Client/Orbis/: Orbis_Minecraft.cpp
Minecraft.Client/PS3/: PS3_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_Minecraft.cpp
Minecraft.Client/Windows64/: Windows64_Minecraft.cpp  Windows64_UIController.cpp
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Xbox/: MinecraftWindows.rc  Xbox_App.cpp  Xbox_Minecraft.cpp
Minecraft.Server/: CMakeLists.txt  FourKitBridge.cpp  FourKitBridge.h  FourKitMappers.cpp  FourKitNatives.cpp  FourKitNatives.h  FourKitRuntime.cpp  FourKitRuntime.h  ServerLogManager.cpp  ServerLogManager.h  ServerLogger.cpp  ServerLogger.h  ServerProperties.cpp  ServerProperties.h
Minecraft.Server.FourKit/: CMakeLists.txt  ChatColor.cs  EventDispatcher.cs  FourKit.cs  FourKitHost.Callbacks.cs  FourKitHost.Events.cs  FourKitHost.cs  GameMode.cs  Location.cs  Material.cs  Minecraft.Server.FourKit.csproj  NativeBridge.cs  Particle.cs  PluginLoadContext.cs  PluginLoader.cs  ServerLog.cs  Sound.cs  World.cs
Minecraft.Server.FourKit/Block/: Action.cs  Biome.cs  Block.cs  BlockFace.cs  BlockState.cs
Minecraft.Server.FourKit/Chunk/: Chunk.cs  ChunkSnapshot.cs
Minecraft.Server.FourKit/Command/: Command.cs  CommandExecutor.cs  CommandSender.cs  ConsoleCommandSender.cs  PluginCommand.cs
Minecraft.Server.FourKit/Enchantments/: AquaAffinityEnchantment.cs  BaneOfArthopodsEnchantment.cs  BlastProtectionEnchantment.cs  DepthStriderEnchantment.cs  EfficiencyEnchantment.cs  Enchantment.cs  FeatherFallingEnchantment.cs  FireAspectEnchantment.cs  FireProtectionEnchantment.cs  FlameEnchantment.cs  FortuneEnchantment.cs  InfinityEnchantment.cs  KnockbackEnchantment.cs  LootingEnchantment.cs  PowerEnchantment.cs  ProjectileProtectionEnchantment.cs  ProtectionEnchantment.cs  PunchEnchantment.cs  RespirationEnchantment.cs  SharpnessEnchantment.cs  SilkTouchEnchantment.cs  SmiteEnchantment.cs  ThornsEnchantment.cs  UnbreakingEnchantment.cs
Minecraft.Server.FourKit/Entity/: Damageable.cs  DisconnectReason.cs  Entity.cs  EntityType.cs  HumanEntity.cs  Item.cs  LivingEntity.cs  OfflinePlayer.cs  Player.cs
Minecraft.Server.FourKit/Enums/: LoginType.cs  TreeType.cs
Minecraft.Server.FourKit/Event/: Cancellable.cs  Event.cs  EventHandlerAttribute.cs  Listener.cs
Minecraft.Server.FourKit/Experimental/: PlayerConnection.cs
Minecraft.Server.FourKit/Inventory/: BeaconInventory.cs  DoubleChestInventory.cs  EnchantingInventory.cs  EnderChestInventory.cs  FurnaceInventory.cs  HorseInventory.cs  Inventory.cs  InventoryHolder.cs  InventoryType.cs  InventoryView.cs  ItemStack.cs  PlayerInventory.cs
Minecraft.Server.FourKit/Net/: InetAddress.cs  InetSocketAddress.cs
Minecraft.Server.FourKit/Plugin/: ServerPlugin.cs
Minecraft.Server.FourKit/Util/: Vector.cs
Minecraft.Server.FourKit/docs/: install.md  main.md  plugin-creation.md  sending-packets.md  setup.md  usage-of-all-events.md
Minecraft.Server/Access/: Access.cpp  Access.h  OpManager.cpp  OpManager.h
Minecraft.Server/Console/: ServerCliEngine.cpp  ServerCliEngine.h
Minecraft.Server/Security/: CipherHandshakeEnforcer.cpp  CipherHandshakeEnforcer.h  ConnectionCipher.cpp  ConnectionCipher.h  IdentityTokenManager.cpp  IdentityTokenManager.h  RateLimiter.cpp  RateLimiter.h  SecurityConfig.cpp  SecurityConfig.h  StreamCipher.cpp  StreamCipher.h
Minecraft.Server/Windows64/: ServerMain.cpp
(+501 files in other folders)
